# aoc-2021

./: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
Day01/: CMakeLists.txt  Day01.cpp  Day01.h
Day02/: CMakeLists.txt  Day02.cpp
Day03/: CMakeLists.txt  Day03.cpp  Day03.h
Day04/: CMakeLists.txt  Day04.cpp
Day05/: CMakeLists.txt  Day05.cpp  Day05.h
Day06/: CMakeLists.txt  Day06.cpp  Day06.h
Day07/: CMakeLists.txt  Day07.cpp  Day07.h
Day08/: CMakeLists.txt  Day08.cpp  Day08.h
Day09/: CMakeLists.txt  Day09.cpp
Day10/: CMakeLists.txt  Day10.cpp
Day11/: CMakeLists.txt  Day11.cpp
Day12/: CMakeLists.txt  Day12.cpp
Day13/: CMakeLists.txt  Day13.cpp
Day14/: CMakeLists.txt  Day14.cpp
Day15/: CMakeLists.txt  Day15.cpp
Day16/: CMakeLists.txt  Day16.cpp  Day16.h
lib/: bigint.cpp  strings.cpp  utilities.cpp
scratch/: CMakeLists.txt  scratch.cpp
