# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("AoC2021")

# Include sub-projects.
add_subdirectory ("Day01")
add_subdirectory ("Day02")
add_subdirectory ("Day03")
add_subdirectory ("Day04")
add_subdirectory ("Day05")
add_subdirectory ("Day06")
add_subdirectory ("Day07")
add_subdirectory ("Day08")
